fix: Scale correctly on mobile

--- a/style.css
+++ b/style.css
@@ -12,30 +12,29 @@ html {
     display: table;
 }
 
+img {
+    width: 80%;
+    min-width: 200px;
+}
+
 img.logo {
     position: relative;
-    display: block;
-    width: 50%;
-    height: auto;
-    margin: auto;
+    z-index: 1;
     filter: invert(100%) sepia(0%) saturate(7500%) hue-rotate(61deg) brightness(94%) contrast(111%) drop-shadow(0px 0px 2px rgba(255, 255, 255, 0.4)) ;
 }
 
 img.top {
-    position: relative;
-    display: block;
-    width: 50%;
-    height: auto;
-    margin: auto;
+    position: absolute;
+    z-index: 2;
     filter: invert(98%) sepia(21%) saturate(3147%) hue-rotate(354deg) brightness(99%) contrast(109%) drop-shadow(0px 0px 5px rgba(255, 236, 68, 0.8)) ;
 }
 
 .frame {
-    top:50%;
-    left:50%;
-    margin: 0;
-    position: fixed;
-
+    position: absolute;
+    display: block;
+    top: 50%;
+    left: 50%;
+    text-align: center;
     transform: translate(-50%, -50%);
 }
 
